--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
     "classnames": "^2.2.5",
     "file-loader": "^0.10.0",
     "install": "^0.8.7",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "npm": "^4.3.0",
     "react": "^15.4.2",
+    "react-collapse": "^2.3.3",
+    "react-dnd": "^2.2.4",
+    "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.4.2",
+    "react-height": "^2.2.0",
     "react-lorem-component": "^0.11.0",
     "react-moment": "^0.2.2",
+    "react-motion": "^0.4.7",
     "react-redux": "^5.0.2",
     "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
