--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^4.3.0",
     "react": "^15.4.2",
     "react-collapse": "^2.3.3",
+    "react-day-picker": "^5.1.2",
     "react-dnd": "^2.2.4",
     "react-dnd-html5-backend": "^2.2.4",
     "react-dom": "^15.4.2",
