--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-moment": "^0.2.2",
     "react-motion": "^0.4.7",
     "react-redux": "^5.0.2",
+    "react-slider": "^0.7.0",
     "react-textarea-autosize": "^4.0.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.8.1",
